# Dark-Matter

./: Makefile  README-ptbr.md  README.md  pyproject.toml
services/airflow/: docker-compose-airflow.yaml
services/minio/: docker-compose-minio.yaml
services/postgres/: docker-compose-postgres.yaml
services/postgres/init/: init.sql
services/spark/: docker-compose-spark.yaml
src/airflow/dags/dags/: complex-dag-1.py  simple-dag-1.py
